<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_horizontal|fill_vertical"
    android:orientation="vertical"
    android:id="@+id/linearLayout">


    <TextView
        android:id="@+id/forecastDate"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="70dp"
        android:padding="16dp"
        android:textIsSelectable="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/maxTempLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".ItemDetailFragment"
        tools:layout_conversion_absoluteHeight="122dp"
        tools:layout_conversion_absoluteWidth="411dp" />

    <TextView
        android:id="@+id/maxTempLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="30dp"
        android:text="@string/max_temp"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/minTempLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:context=".ItemDetailFragment"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="281dp" />


    <TextView
        android:id="@+id/maxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        android:textStyle="normal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toEndOf="@+id/maxTempLabel"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ItemDetailFragment"
        tools:layout_conversion_absoluteHeight="24dp"
        tools:layout_conversion_absoluteWidth="118dp" />

    <TextView
        android:id="@+id/minTempLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="30dp"
        android:text="@string/min_temp"
        app:layout_constraintBottom_toTopOf="@+id/pressureLabel"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="281dp" />


    <TextView
        android:id="@+id/minTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/minTempLabel"
        app:layout_constraintTop_toBottomOf="@+id/maxTemp"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="118dp" />

    <TextView
        android:id="@+id/pressureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="30dp"
        android:text="@string/pressure"
        app:layout_constraintBottom_toTopOf="@+id/wind_speed_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="281dp" />


    <TextView
        android:id="@+id/air_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toEndOf="@+id/pressureLabel"
        app:layout_constraintTop_toBottomOf="@+id/minTemp"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="118dp" />

    <TextView
        android:id="@+id/wind_speed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="30dp"
        android:text="@string/wind_speed"
        app:layout_constraintBottom_toTopOf="@+id/wind_direct_label"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="281dp" />


    <TextView
        android:id="@+id/wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="32dp"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/wind_speed_label"
        app:layout_constraintTop_toBottomOf="@+id/air_pressure"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="118dp" />

    <TextView
        android:id="@+id/wind_direct_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/wind_direction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wind_speed_label"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="281dp" />


    <TextView
        android:id="@+id/wind_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/wind_direct_label"
        app:layout_constraintTop_toBottomOf="@+id/wind_speed"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="118dp" />

    <TextView
        android:id="@+id/hum_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/humidity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wind_direct_label"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="281dp" />


    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toEndOf="@+id/hum_label"
        app:layout_constraintTop_toBottomOf="@+id/wind_direction"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="118dp" />

    <TextView
        android:id="@+id/vis_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/visibility"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hum_label"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="281dp" />


    <TextView
        android:id="@+id/vis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toEndOf="@+id/vis_label"
        app:layout_constraintTop_toBottomOf="@+id/humidity"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="118dp" />

    <TextView
        android:id="@+id/predict_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/predictability"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vis_label"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="281dp" />


    <TextView
        android:id="@+id/predictability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/predict_label"
        app:layout_constraintTop_toBottomOf="@+id/vis"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="118dp" />

    <ImageView
        android:id="@+id/pictogram"
        android:layout_width="95dp"
        android:layout_height="78dp"
        android:layout_marginStart="51dp"
        app:layout_constraintBottom_toTopOf="@+id/maxTempLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="61dp"
        tools:layout_conversion_absoluteWidth="128dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/prevDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/previousDay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/predict_label"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="206dp" />

    <Button
        android:id="@+id/nextDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/nextDay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/predict_label"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="206dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
